--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+REACT_APP_AUTH0_DOMAIN=haova.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=p9gXhSO6RZ9bQL5UgAY9QOI2iNtma1fg
+REACT_APP_API_ENDPOINT=https://ft3pg3rmah.execute-api.us-east-1.amazonaws.com/dev
